Fix some errors from TSE's code review
- Fix overlapping sections and alignment issues in mobile screen
- Re-locate the footer section out of the main section

--- a/assets/stylesheet/style.css
+++ b/assets/stylesheet/style.css
@@ -164,12 +164,13 @@ figure {
 }
 
 .subscribe-1 img {
-  width: 180px;
+  width: 190px;
+  padding-left:2rem
 }
 
 .subscribe-1 .position-absolute {
   z-index: 0;
-  left: 85px;
+  left: 90px;
   top: 37px;
 }
 
@@ -185,12 +186,6 @@ figure {
 
 .footer-social-icons {
   margin-left: auto;
-}
-
-.order-md-4 {
-  -ms-flex-order: 4;
-  order: 4;
-  margin-top: -100rem;
 }
 
 @media screen and (min-width: 768px) {
